- Added external app module dstat_postfix
- Added external app module dstat_sendmail
- Added external module dstat_dbus
- Added external module dstat_freespace
- Added external module dstat_utmp
- Removed user stat (now in dstat_utmp module)
- Smaller fixes and overall improvements
- Improved help output and manpage
- Added README.examples, README.performance and README.stats
- Added profiling code (--debug)
- Rewrote cprint/cprintlist logic

* 0.5.10 - released 08/04/2005
- Small fix to restore terminal for all exit paths (Dbt 303526, Modesto Alexandre)
- Get rid of duplicate 'screen width too small' error message in dstat15

* 0.5.9 - released 28/03/2005
- Make default list total lists (cpu, disk, net)
- Fix clearline ANSI to work on older (Debian?) rxvt (Joshua Rodman)
- Improved color/vt100 terminal capabilities logic (Dbt 300288, Charles Lepple)
- Finally use curses for some of the terminal capabilities logic
- Improvement to non-tty handling for intermediate updates
- Small fix to handle the edge of the counters better
- Prevent keyboard input/echo when running

* 0.5.8 - released 15/03/2005
- Added user stats (-u), using python-utmp
- Bail out if all requested stats fail
- Replaced --noheader option by --noheaders option (like vmstat)
- Added -V as short for --version
- Improved help output
- Allow CSV output and human output concurrently
- Removed --csv option (now use --output option)
- Added gnome to known ANSI capable terminal emulation
- Replaced save and restore ANSI to save and restore VT100 (Olav Vitters)
- Backported dstat to python 1.5 again

* 0.5.7 - released 31/12/2004
- Change Makefile to not install when run without target (Kurt Roeckx)
- Fixed another crash caused by /proc instability
- Added --csv option to output Comma-Seperated-Value output
- If output is not a tty, don't care about line-width

* 0.5.6 - released 20/12/2004
- Made sys and int stats unit-aware (so 10000 int/sec -> 10.0k) (Anton Blanchard)