@@ -35,9 +35,11 @@
 
 ### Stat bugs
 + Implement better (?) protection against counter rollovers
-+ tcp stat is very slow and generates lots of softirqs (on some systems), to be confirmed
-+ proc stats (run, blk and new) does not work on 2.4.30 (possibly 2.4.x), to be confirmed
-+ proc stats seem to be off-by-one (some of the time)
++ tcp stat is very slow and generates lots of softirqs (on busy systems), to be confirmed
++ proc stats (run, blk and new) does not work on 2.4.30+ (possibly 2.4.x), to be confirmed
++ disk stats cannot find a usable plugin on 2.4.24+, to be confirmed
++ proc stats seem to be off-by-one compared to vmstat (some of the time, this is what I get from /proc/stat)
++ /proc/partitions can have negative numbers, seen on systems with long uptime. dstat handles this except for calculating the very first stat, no work-around possible
 
 ### Redesign (v2.0)
 + Create modules that can contain samples of different units
@@ -51,3 +53,4 @@
 	blk_read/sec, blk_wrtn/sec (kB/sec)
 
 + Design proper object model and namespace for _all_ possible stats
++ Create a seperate tool, much like nmon
