@@ -1,4 +1,5 @@
 ### FIXME: This module needs infrastructure to provide a list of mountpoints
+### FIXME: Would be nice to have a total by default (half implemented)
 
 class dstat_freespace(dstat):
 	def __init__(self):
@@ -7,7 +8,7 @@ class dstat_freespace(dstat):
 		self.vars = self.vars()
 		self.name = ['/' + os.path.basename(name) for name in self.vars]
 		self.nick = ('used', 'free')
-		self.init(self.vars, 2)
+		self.init(self.vars + ['total',], 2)
 
 	def vars(self):
 		ret = []
@@ -26,8 +27,10 @@ class dstat_freespace(dstat):
 		return ret
 
 	def extract(self):
+		self.val['total'] = (0, 0)
 		for name in self.vars:
 			res = os.statvfs(name)
 			self.val[name] = ( (float(res.f_blocks) - float(res.f_bavail)) * long(res.f_frsize), float(res.f_bavail) * float(res.f_frsize) )
+			self.val['total'] = (self.val['total'][0] + self.val[name][0], self.val['total'][1] + self.val[name][1])
 
 # vim:ts=4:sw=4
