@@ -9,6 +9,13 @@ class dstat_sendmail(dstat):
 		self.vars = ('queue',)
 		self.nick = ('queu',)
 		self.init(self.vars, 1)
+		self.check()
+
+	def check(self):
+		if not os.access('/var/spool/mqueue', os.R_OK):
+			raise Exception, 'Module cannot access sendmail queue'
+			return False
+		return True
 
 	def extract(self):
 		self.val['queue'] = len(glob.glob('/var/spool/mqueue/qf*'))
